--- a/comics/marvel-comics-master/style.css
+++ b/comics/marvel-comics-master/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: #303030;
     color: #ffffff;
+
 }
 
 #search {
@@ -29,3 +30,34 @@ body {
 .tooltip.tooltip-main {
     opacity: 1 !important;
 }
+
+
+
+#Cadre {
+box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.65);
+-moz-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.65);
+-webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.65);
+width: 17%; 
+height: 200px; 
+background-color: white;
+float:left;
+margin-left: 10px;
+margin-top: 10px;
+} 
+
+#Cadre1 {
+box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.65);
+-moz-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.65);
+-webkit-box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.65);
+width: 30%; 
+height: 350px; 
+background-color: white;
+float:left;
+margin-left: 10px;
+margin-top: 10px;
+display:inline-block; 
+color:black;
+text-align: center;
+}
+
+
